--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@supabase/ssr": "^0.6.1"
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.49.8"
 	}
 }
