--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@lucide/svelte": "^0.511.0",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.8",
-		"chart.js": "^4.4.9"
+		"chart.js": "^4.4.9",
+		"chartjs-adapter-date-fns": "^3.0.0"
 	}
 }
